# imobi-ai-crm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  create_supabase_tables.py  create_tables_final.py  create_tables_simple.py  docker-compose.yml  improved_n8n_server.py  main.py  pyproject.toml  railway.toml  requirements.txt
api/: automation_endpoints.py  carol_endpoints.py  crm_endpoints.py  health_endpoints.py  matching_endpoints.py  n8n_integration_endpoints.py  xml_import_endpoints.py
config/: cliente_template.py  xml_template.py
config/examples/: cliente_exemplo_xml.py  cliente_teste_local.py  cliente_teste_local_old.py
core/: ai_config.py  celery_app.py  config.py  config_central.py  database.py  logger.py  main.py  main_backup.py  main_clean.py  main_final.py  main_minimal.py  main_simple.py  main_stable.py  redis_config.py  supabase_config.py
deploy/sql/: 01_init.sql
migrations/: env.py
models/: agendamento.py  base.py  cliente.py  cliente_broken.py  configuracao_imobiliaria.py  garantias_locacao.py  imovel.py  imovel_dual.py  lead.py  lead_crm_integrado.py  tipos_garantia.py
scripts/: arquivos_essenciais.txt  cleanup_system.py  create_sample_client.py  criar_leads_teste.py  init_fase1.py  start_beat.sh  start_flower.sh  start_worker.sh
services/ai_matching/: __init__.py  matching_engine.py
services/automation/: carol_automation.py  daily_automation.py
services/crm/: agendamento_service.py
services/crm_integration/: crm_connector.py
static/: exemplo_imoveis_backup.xml  exemplo_imoveis_com_fotos.xml
(+30 files in other folders)
